run in cloud run

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,31 +2,46 @@ version: 2.1
 orbs:
   gcp-gcr: circleci/gcp-gcr@0.6.1
   cloudrun: circleci/gcp-cloud-run@1.0.0
+  node: circleci/node@5.1.0
 jobs:
-  build:
-    working_directory: ~/repo
+#  build:
+#    working_directory: ~/repo
+#    docker:
+#      - image: cimg/node:19.8.0
+#    resource_class: small
+#    steps:
+#      - checkout
+#      - run:
+#          name: Update NPM
+#          command: "sudo npm install -g npm@9.6.2"
+#      - run:
+#          name: Build Next.js app
+#          command: npm run build
+#      - restore_cache:
+#          key: dependency-cache-{{ checksum "package-lock.json" }}
+#      - save_cache:
+#          key: dependency-cache-{{ checksum "package-lock.json" }}
+#          paths:
+#            - ./node_modules
+#      - run:
+#          name: Run tests
+#          command: npm run test
+  build_node_js:
     docker:
       - image: cimg/node:19.8.0
+    resource_class: small
     steps:
       - checkout
       - run:
           name: Update NPM
           command: "sudo npm install -g npm@9.6.2"
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install dependencies
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: Run tests
-          command: npm run test
+      - node/install-packages:
+          cache-path: ~/project/node_modules
+          override-ci-command: npm install
+      - run: npm run test
 #  build_push_image_cloud_run_mangaged:
 #    docker:
-#      - image: circleci/python:3.7.4
+#      - image: google/cloud-sdk:latest
 #    steps:
 #      - checkout
 #      - setup_remote_docker:
@@ -39,8 +54,7 @@ jobs:
 #            echo 'export GOOGLE_CLOUD_KEYS=$(cat $HOME/gcloud-service-key.json)' >> $BASH_ENV
 #            echo 'export TAG=${CIRCLE_SHA1}' >> $BASH_ENV
 #            echo 'export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME' >> $BASH_ENV && source $BASH_ENV
-#            pip install --user -r requirements.txt
-#            pyinstaller -F hello_world.py
+#            sudo npm install -g npm@9.6.2
 #            docker build -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME -t us.gcr.io/$GOOGLE_PROJECT_ID/$IMAGE_NAME:$TAG .
 #      - gcp-gcr/gcr-auth:
 #          gcloud-service-key: GOOGLE_CLOUD_KEYS
@@ -59,7 +73,7 @@ jobs:
 workflows:
   build_test_deploy:
     jobs:
-      - build
-#      - build_push_image_cloud_run_mangaged:
-#          requires:
-#            - build
+      - build_node_js
+      # - build_push_image_cloud_run_mangaged:
+      #     requires:
+      #       - build
