--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start",
     "test": "jest"
   },
+  "engines": {
+    "node": "19.8.0",
+    "npm": "9.6.2"
+  },
   "dependencies": {
     "next": "latest",
     "react": "18.2.0",
