--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,26 @@
+# This file defines the build and deploy process
+# https://console.cloud.google.com/cloud-build/builds;region=europe-west1?project=puls-381314
+substitutions:
+  # _DOCKER_IMAGE_LOCATION Container Registry location. https://console.cloud.google.com/gcr/images/puls-381314?project=puls-381314
+  _DOCKER_IMAGE_LOCATION: 'gcr.io/${PROJECT_ID}/nextjs-blog:${COMMIT_SHA}' # default value
 steps:
+  # Install dependencies
+  - name: node:19.8.1
+    entrypoint: npm
+    args: ['install']
+  # Run tests
+  - name: node:19.8.1
+    entrypoint: npm
+    args: ['test']
+  - name: node:19.8.1
+    entrypoint: npm
+    args: ['run', 'build']
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/nextjs-blog:$COMMIT_SHA', '.']
+    args: ['build', '-t', '${_DOCKER_IMAGE_LOCATION}', '.']
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/nextjs-blog:$COMMIT_SHA']
+    args: ['push', '${_DOCKER_IMAGE_LOCATION}']
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
@@ -13,11 +29,13 @@ steps:
       - 'deploy'
       - 'nextjs-blog'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/nextjs-blog:$COMMIT_SHA'
+      - '${_DOCKER_IMAGE_LOCATION}'
       - '--region'
-      - 'europe-west1'
+      - '${LOCATION}' # This is the region associated with the build. https://cloud.google.com/build/docs/configuring-builds/substitute-variable-values
 images:
   - 'gcr.io/$PROJECT_ID/nextjs-blog:$COMMIT_SHA'
+# For some reason serviceAccount is not overridden. TODO: Investigate
 serviceAccount: 'projects/puls-381314/serviceAccounts/7224893779@cloudbuild.gserviceaccount.com'
+# This option logs everything to cloud logging, otherwise we'd log to bucket also
 options:
   logging: CLOUD_LOGGING_ONLY
