--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "jest"
   },
   "engines": {
-    "node": "19.8.0",
-    "npm": "9.6.2"
+    "node": "19.8.1",
+    "npm": "9.5.1"
   },
   "dependencies": {
     "@types/node": "18.15.9",
@@ -23,7 +23,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -42,10 +45,8 @@
     "@testing-library/dom": "^9.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "jest": "^29.5.0"
   }
 }
