--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   cloudrun: circleci/gcp-cloud-run@1.0.2
   node: circleci/node@5.1.0
 jobs:
-  build_and_deploy:
+  test:
     docker:
       - image: 'cimg/base:stable'
     steps:
@@ -20,6 +20,11 @@ jobs:
       - run:
           command: npm run build
           name: Build app
+  deploy:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - checkout
       - run:
           name: Managed deployed puls frontend.
           command: |
@@ -53,6 +58,15 @@ jobs:
           unauthenticated: true
 
 workflows:
+  version: 2
   run-jobs:
     jobs:
-      - build_and_deploy
+      - test
+      - deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only:
+                - main
+              
