--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-auth": "^4.22.0",
     "postcss": "^7.0.39",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
