--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "recharts": "^2.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "5.0.2"
