--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "npm": "9.5.1"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "apexcharts": "^3.37.2",
-    "autoprefixer": "^9.8.8",
+    "daisyui": "^2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "next-auth": "^4.22.0",
-    "postcss": "^7.0.39",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.5.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.0.2"
   },
   "jest": {
