--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": "9.5.1"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
