--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/components/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-auth.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-auth.config.js", "src/pages/integrations/adding.tsx", "src/components/common/dropdown.js"],
   "exclude": ["node_modules"]
 }
