--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "daisyui": "^2.51.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "js-cookie": "^3.0.5",
     "next": "13.2.4",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-circle-flags": "^0.0.18",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
@@ -52,6 +54,7 @@
     "@testing-library/dom": "^9.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/js-cookie": "^3.0.3",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0"
   }
